--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap');
+
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
+}
+
+.container {
+  width: 100%;
+  min-height: 100vh;
+  padding: 1px;
+  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+  position: relative;
+  color: #fb6035;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.card {
+  width: 400px;
+  height: auto;
+  padding: 30px;
+  text-align: center;
+  border: 3px solid #ff005d;
+  border-radius: 10px;
+  background: white;
+  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
+}
+
+.card img {
+  margin-top: -60px;
+  width: 70px;
+}
+
+
+.card p {
+  margin: 20px;
+}
+
+.btn {
+  width: 110px;
+  height: 40px;
+  color: white;
+  font-size: 14px;
+  background: #ff005d;
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.btn:active {
+  transform: scale(0.90);
 }
